# chipped8

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: pyinstaller.yml
chipped8/: __init__.py  main.py  main_cli.py
chipped8/core/: audio.py  constants.py  cpu.py  display.py  emulator.py  exceptions.py  icpu.py  interpreter.py  keys.py  maths.py  memory.py  platform.py  quirks.py  registers.py  stack.py  timers.py
chipped8/core/cached_cpu/: cpu.py
chipped8/core/cached_cpu/instrs/: __init__.py  instr.py  instr_00CN.py  instr_00DN.py  instr_00E0.py  instr_00EE.py  instr_00FB.py  instr_00FC.py  instr_00FD.py  instr_00FE.py  instr_00FF.py  instr_1NNN.py  instr_2NNN.py  instr_3XNN.py  instr_4XNN.py  instr_5XY0.py  instr_5XY2.py  instr_5XY3.py  instr_6XNN.py  instr_7XNN.py  instr_8XY0.py  instr_8XY1.py  instr_8XY2.py  instr_8XY3.py  instr_8XY4.py  instr_8XY5.py  instr_8XY6.py  instr_8XY7.py  instr_8XYE.py  instr_9XY0.py  instr_ANNN.py  instr_BNNN.py  instr_CXNN.py  instr_DXYN.py  instr_EX9E.py  instr_EXA1.py  instr_F000.py  instr_F002.py  instr_FN01.py  instr_FX07.py  (+15 more)
chipped8/core/cached_lx_cpu/: cpu.py  cpu_la.py  emitter.py  factory.py  instr_kind.py
chipped8/core/cpu/: icpu.py
chipped8/core/cpu/cached/: instr_kind.py
chipped8/core/cpu/cached/lamb/: cpu_hotblock.py  cpu_preblock.py  emitter.py  factory.py
chipped8/core/cpu/pure/: cpu.py
chipped8/core/pure_cpu/: cpu.py
chipped8/gui/: audio.py  c8handler.py  color_dialog.py  graphicsprovider.py  mainwindow.py  metadata_overlay.py  qt_app.py  qt_app_1.py  rom_db.py  sceneprovider.py  sdl_app.py  settings.py  view.qml
chipped8/gui/qml/: view.qml
chipped8/gui/shaders/: retro.frag  texture.vert
pyinstaller/: chipped8.spec  entitlements.plist  logo.icns  runner.py
tests/: conftest.py  test_framework.py  test_opcodes.py
tools/: compile_shaders.py
