[build-system]
requires = [
    "setuptools",
    "wheel"
]

[project]
name = "chipped8"
version = "1.0.0"
authors = [
    { name = "John Schember", email = "john@nachtimwald.com" },
]

description = "Chip8 Emulator"
readme = "README.md"
license = { file = "LICENSE"  }
keywords = [ "chip8", "emulator", "game" ]

requires-python = ">=3.11.0"
dependencies = [
    "PySide6 >= 6.6.1"
]

[project.scripts]
chipped8 = "chipped8.main_cli:main"
