[build-system]
requires = [
    "setuptools",
    "wheel"
]

[project]
name = "chipped8"
version = "0.1.0"
authors = [
    { name = "John Schember", email = "john@nachtimwald.com" },
]

description = "Chip-8 / Super-Chip / XO-Chip Emulator"
readme = "README.md"
license = { file = "LICENSE"  }
keywords = [ "chip8", "chip-8", "emulator", "game", "xochip", "xo-chip", "superchip", "super-chip" ]

requires-python = ">=3.11.0"
dependencies = [
    "PySide6 >= 6.6.1"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Emulators"
]

[project.urls]
Homepage = "https://github.com/user-none/chipped8"
Repository = "https://github.com/user-none/chipped8"
Issues = "https://github.com/user-none/chipped8/issues"

[project.scripts]
chipped8 = "chipped8.main:main"

[tool.setuptools.package-data]
"chipped8.gui.qml" = [ "*.qml" ]
