[build-system]
requires = [
    "setuptools",
    "build",
    "wheel",
    "PySide6 >= 6.9.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "chipped8"
version = "0.2.0"
authors = [
    { name = "John Schember", email = "john@nachtimwald.com" },
]

description = "Chip-8 / Super-Chip / XO-Chip Emulator"
readme = "README.md"
license = "MIT"
keywords = [ "chip8", "chip-8", "emulator", "game", "xochip", "xo-chip", "superchip", "super-chip" ]

requires-python = ">=3.11.0"
dependencies = [
    "PySide6 >= 6.9.0",
    "numpy"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Emulators"
]

[project.urls]
Homepage = "https://github.com/user-none/chipped8"
Repository = "https://github.com/user-none/chipped8"
Issues = "https://github.com/user-none/chipped8/issues"

[project.scripts]
chipped8 = "chipped8.main:main"

[tool.setuptools.packages.find]
include = ["chipped8*"]
exclude = ["pyinstaller"]

[tool.setuptools.package-data]
"chipped8.gui.shaders" = [ "*.qsb" ]
